Update dependencies (#116)